16/5/24 fixed bug with updating student contact

--- a/src/app/components/nav-left/nav-left.component.html
+++ b/src/app/components/nav-left/nav-left.component.html
@@ -1,4 +1,4 @@
-<app-academic-year-selector (academicYear)="setAcademicYear($event)"></app-academic-year-selector>
+<app-academic-year-selector (academicYear)="emitAcademicYear($event)"></app-academic-year-selector>
 <ul>
   <li>
     <a routerLink="/home/students">Students</a>
