23/5/24 fixed exceptions in getting input values by using the ? operator

--- a/src/app/components/student-tabs/student-tabs.component.html
+++ b/src/app/components/student-tabs/student-tabs.component.html
@@ -1,12 +1,12 @@
 <div>
     <ul class="tabs__tab-bars">
-      <li class="tabs__tab" ><a [routerLink]="['/home/students', student.stakeholderID, 'contact']">Contact Info</a></li>
-      <li class="tabs__tab" ><a [routerLink]="['/home/students', student.stakeholderID, 'program']">Program</a></li>
-      <li class="tabs__tab" ><a [routerLink]="['/home/students', student.stakeholderID, 'courses']">Courses</a></li>
-      <li class="tabs__tab" ><a [routerLink]="['/home/students', student.stakeholderID, 'instruments']">Instruments</a></li>
-      <li class="tabs__tab" ><a [routerLink]="['/home/students', student.stakeholderID, 'documents']">Documents</a></li>
-      <li class="tabs__tab" ><a [routerLink]="['/home/students', student.stakeholderID, 'finances']">Finantial Information</a></li>
-      <li class="tabs__tab" ><a [routerLink]="['/home/students', student.stakeholderID, 'exams']">Exams</a></li>
+      <li class="tabs__tab" ><a [routerLink]="['/home/students', student?.stakeholderID, 'contact']">Contact Info</a></li>
+      <li class="tabs__tab" ><a [routerLink]="['/home/students', student?.stakeholderID, 'program']">Program</a></li>
+      <li class="tabs__tab" ><a [routerLink]="['/home/students', student?.stakeholderID, 'courses']">Courses</a></li>
+      <li class="tabs__tab" ><a [routerLink]="['/home/students', student?.stakeholderID, 'instruments']">Instruments</a></li>
+      <li class="tabs__tab" ><a [routerLink]="['/home/students', student?.stakeholderID, 'documents']">Documents</a></li>
+      <li class="tabs__tab" ><a [routerLink]="['/home/students', student?.stakeholderID, 'finances']">Finantial Information</a></li>
+      <li class="tabs__tab" ><a [routerLink]="['/home/students', student?.stakeholderID, 'exams']">Exams</a></li>
     </ul>
 </div>
 <div>
