--- a/src/app/components/students-filter-container/students-filter-container.component.html
+++ b/src/app/components/students-filter-container/students-filter-container.component.html
@@ -62,7 +62,7 @@
       <select class="form-control" ngModel name="program" id="program">
         <option value="" selected></option>
         <option *ngFor="let program of programs" [value]="program.id">
-          {{ program.name }}
+          {{ program.programName }}
         </option>
       </select>
     </div>
