5/6/24 fixed bug in studentContactComponent showing the correct date

--- a/src/app/components/student-contact/student-contact.component.html
+++ b/src/app/components/student-contact/student-contact.component.html
@@ -31,7 +31,7 @@
           <label for="dateOfBirth">Birth Date</label>
           <input type="date" class="form-control" required name="dateOfBirth"
               id="dateOfBirth" placeholder="Birth Date" #dateOfBirth="ngModel"
-              [(ngModel)]="DateOfBirth">
+              [(ngModel)]="DateOfBirthFormatted">
           <div class="alert alert-danger" *ngIf="dateOfBirth.touched && !dateOfBirth.valid">
             Birth Date is required
           </div>
