--- a/src/app/student-program/student-program.component.html
+++ b/src/app/student-program/student-program.component.html
@@ -1,28 +1,12 @@
 <form #programForm="ngForm" (ngSubmit)="onSave(programForm.value)">
   <div class="info-block">
-    <h2 class="info-block__heading">Program Detail</h2>
+    <h2 class="info-block__heading">Add Program</h2>
     <div class="info-block__body grid grid--col-2">
       <div class="form-group">
         <label for="program">Program</label>
-        <select name="program" id="program" class="form-control" ngModel>
+        <select name="program" id="program" class="form-control" [(ngModel)]="selectedProgram">
           <option *ngFor="let program of programs" [value]="program.id">
             {{ program.programName }}
-          </option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="registrationStatus">Registration Status</label>
-        <select
-          name="registrationStatus"
-          id="registrationStatus"
-          class="form-control"
-          ngModel
-        >
-          <option
-            *ngFor="let registrationStatus of registrationStatuses"
-            [value]="registrationStatus.id"
-          >
-            {{ registrationStatus.name }}
           </option>
         </select>
       </div>
@@ -42,22 +26,6 @@
           </option>
         </select>
       </div>
-      <div class="form-group">
-        <label for="instrumentPriceList">Instrument Price List</label>
-        <select
-          name="instrumentPriceList"
-          id="instrumentPriceList"
-          class="form-control"
-          ngModel
-        >
-          <option
-            *ngFor="let instrumentPriceList of instrumentPriceLists"
-            [value]="instrumentPriceList.id"
-          >
-            {{ instrumentPriceList.name }}
-          </option>
-        </select>
-      </div>
       <div class="form-group main-col--full">
         <label for="comments">Comments</label>
         <input
@@ -70,6 +38,83 @@
           ngModel
         />
       </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Add Program</button>
+      </div>
+    </div>
+
+    <div class="programs" *ngFor="let program of programs">
+      <h2 class="info-block__heading">Program Detail</h2>
+      <div class="info-block__body grid grid--col-2">
+        <div class="form-group">
+          <label for="program">Program</label>
+          <select name="program" id="program" class="form-control" ngModel>
+            <option *ngFor="let program of programs" [value]="program.id">
+              {{ program.programName }}
+            </option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="registrationStatus">Registration Status</label>
+          <select
+            name="registrationStatus"
+            id="registrationStatus"
+            class="form-control"
+            ngModel
+          >
+            <option
+              *ngFor="let registrationStatus of registrationStatuses"
+              [value]="registrationStatus.id"
+            >
+              {{ registrationStatus.name }}
+            </option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="programPriceList">Program Price List</label>
+          <select
+            name="programPriceList"
+            id="programPriceList"
+            class="form-control"
+            ngModel
+          >
+            <option
+              *ngFor="let programPriceList of programPriceLists"
+              [value]="programPriceList.id"
+            >
+              {{ programPriceList.name }}
+            </option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="instrumentPriceList">Instrument Price List</label>
+          <select
+            name="instrumentPriceList"
+            id="instrumentPriceList"
+            class="form-control"
+            ngModel
+          >
+            <option
+              *ngFor="let instrumentPriceList of instrumentPriceLists"
+              [value]="instrumentPriceList.id"
+            >
+              {{ instrumentPriceList.name }}
+            </option>
+          </select>
+        </div>
+        <div class="form-group main-col--full">
+          <label for="comments">Comments</label>
+          <input
+            type="text"
+            class="form-control"
+            name="comments"
+            id="comments"
+            placeholder="Comments"
+            #comments="ngModel"
+            ngModel
+          />
+        </div>
+      </div>
     </div>
 
     <h2 class="info-block__heading">Main Instruments</h2>
@@ -77,8 +122,8 @@
     <!-- <div class="info-block__body">
 
     </div> -->
-    <div class="info-block__heading">
+    <!-- <div class="info-block__heading">
       <button type="submit" class="btn btn-primary">Save</button>
-    </div>
+    </div> -->
   </div>
 </form>
