--- a/src/app/components/parents-contact/parents-contact.component.html
+++ b/src/app/components/parents-contact/parents-contact.component.html
@@ -2,8 +2,8 @@
   <form #parentForm="ngForm" class="parent-form" (ngSubmit)="onParentChange(parentForm.value)">
     <div class="form-group">
       <label for="israeliId">Israeli Id</label>
-      <input type="text" class="form-control" required name="israeliId"
-          id="israeliId" placeholder="Israeli Id" #israeliId="ngModel" [(ngModel)]="parent.israeliID">
+      <input type="text" class="form-control" required name="israeliID"
+          id="israeliID" placeholder="Israeli ID" #israeliId="ngModel" [(ngModel)]="parent.israeliID">
     </div>
     <div class="form-group">
       <label for="firstName">First Name</label>
