--- a/src/app/student-program/student-program.component.html
+++ b/src/app/student-program/student-program.component.html
@@ -7,6 +7,7 @@
         <div class="form-group">
           <label for="program">Program</label>
           <select name="program" id="program" class="form-control" [(ngModel)]="selectedProgram">
+            <option value="" disabled>Select a program</option>
             <option *ngFor="let program of programs" [value]="program.id">
               {{ program.programName }}
             </option>
