--- a/src/app/student-program/student-program.component.html
+++ b/src/app/student-program/student-program.component.html
@@ -6,12 +6,15 @@
       <div class="info-block__body grid grid--col-2">
         <div class="form-group">
           <label for="program">Program</label>
-          <select name="program" id="program" class="form-control" [(ngModel)]="selectedProgram">
-            <option value="" disabled>Select a program</option>
-            <option *ngFor="let program of programs" [value]="program.id">
+          <select name="program" id="program" class="form-control" [(ngModel)]="selectedProgram"
+          (change)="onProgramChange($event)">
+            <option [ngValue]="{ id: -1, programName: 'no selection' }" disabled>Select a program</option>
+            <option *ngFor="let program of programs" [ngValue]="program">
               {{ program.programName }}
             </option>
           </select>
+          <!-- Display selected program for debugging -->
+           <p>Selected Program: {{ selectedProgram | json }}</p>
         </div>
         <div class="form-group main-col--full">
           <label for="comments">Comments</label>
