--- a/src/app/components/parents-contact/parents-contact.component.html
+++ b/src/app/components/parents-contact/parents-contact.component.html
@@ -3,6 +3,34 @@
     <div class="form-group">
       <label for="israeliId">Israeli Id</label>
       <input type="text" class="form-control" required name="israeliID"
+          id="israeliID" placeholder="Israeli ID" [(ngModel)]="israeliId">
+    </div>
+    <div class="form-group">
+      <label for="firstName">First Name</label>
+      <input type="text" class="form-control" required name="firstName"
+          id="firstName" placeholder="First Name" [(ngModel)]="firstName">
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="text" class="form-control" required name="mainContactEmail"
+          id="mainContactEmail" placeholder="Email" [(ngModel)]="mainContactEmail">
+    </div>
+    <div class="form-group">
+      <label for="cellphone">Cellphone</label>
+      <input type="text" class="form-control" required name="mainContactPhoneNumber"
+          id="mainContactPhoneNumber" placeholder="Cellphone" [(ngModel)]="mainPhoneNumber">
+    </div>
+    <div class="info-block" *ngIf="!parent">
+      <button type="submit" class="btn btn-primary">Save Parent</button>
+    </div>
+    <div class="info-block" *ngIf="parent">
+      <button type="submit" class="btn btn-primary">Update Parent</button>
+    </div>
+  </form>
+  <!-- <form #parentForm="ngForm" class="parent-form" (ngSubmit)="onParentChange(parentForm.value)">
+    <div class="form-group">
+      <label for="israeliId">Israeli Id</label>
+      <input type="text" class="form-control" required name="israeliID"
           id="israeliID" placeholder="Israeli ID" #israeliId="ngModel" [(ngModel)]="parent.israeliID">
     </div>
     <div class="form-group">
@@ -20,8 +48,11 @@
       <input type="text" class="form-control" required name="mainContactPhoneNumber"
           id="mainContactPhoneNumber" placeholder="Cellphone" #email="ngModel" [(ngModel)]="parent.mainContactPhoneNumber">
     </div>
-    <div class="info-block">
+    <div class="info-block" *ngIf="!parent">
       <button type="submit" class="btn btn-primary">Save Parent</button>
     </div>
-  </form>
+    <div class="info-block" *ngIf="parent">
+      <button type="submit" class="btn btn-primary">Update Parent</button>
+    </div>
+  </form> -->
 </div>
